--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "dependencies": {
-    "jest": "^27.5.1"
-  },
-  "scripts": {
-    "test": "jest"
-  }
+    "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/plugin-transform-modules-commonjs": "^7.17.7",
+        "@babel/preset-env": "^7.12.11",
+        "@types/jest": "^26.0.20",
+        "babel-jest": "^26.6.3",
+        "jest": "^26.6.3"
+    },
+    "scripts": {
+        "test": "jest"
+    }
 }
